--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.43MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-347.1KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 乌克兰-539.6KB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇯🇵 日本-4.05MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇨🇳 中国-465.0KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇬🇧 英国-1.76MB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-423.0KB/s(Youtube:不良林), server: ingress-i2.onebox6.org, port: 38101, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.onebox6.org}}
+  - {name: 🇨🇳 中国-596.0KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
+  - {name: 🇺🇸 美国-3.87MB/s(Youtube:不良林), server: 208.98.48.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 208.98.48.2}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
-      - 乌克兰-539.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-465.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-596.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
-      - 乌克兰-539.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-465.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-596.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
-      - 乌克兰-539.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-465.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-596.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
-      - 乌克兰-539.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-465.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-596.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
-      - 乌克兰-539.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-465.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-596.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
-      - 乌克兰-539.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-465.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-596.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-1.44MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
-      - 乌克兰-539.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-465.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-423.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-596.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.87MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
