--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.66MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 台湾-1.52MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-578.0KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
   - {name: 🇭🇰 香港-1.85MB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
-  - {name: 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-340.9KB/s(Youtube:不良林), server: zhizun22.jafiyun.club, port: 21186, type: vmess, uuid: 4c348c16-6c18-3ee6-81d3-052c7f4d4b65, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: 208.98.48.2, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 208.98.48.2}}
-  - {name: 🇮🇳 印度-1.62MB/s(Youtube:不良林), server: jgwhdlb3.gaox.ml, port: 443, type: trojan, password: 006baa3f-4bc3-4915-b60d-c8c5dae11a11, sni: jgwhdlb3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.52MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇫🇷 法国-498.8KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-654.1KB/s(Youtube:不良林), server: 169.197.141.52, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 169.197.141.52, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-2.74MB/s(Youtube:不良林), server: 169.197.141.52, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-1.50MB/s(Youtube:不良林), server: t02.tgfaka.com, port: 18443, type: trojan, password: 543a952b-2261-4244-a9bb-30f902c19bf7, sni: t02.tgfaka.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-342.4KB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇰🇷 韩国-364.3KB/s(Youtube:不良林), server: 13.125.218.170, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇯🇵 日本-1.61MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-578.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-498.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-654.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-364.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-578.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-498.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-654.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-364.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-578.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-498.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-654.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-364.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-578.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-498.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-654.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-364.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-578.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-498.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-654.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-364.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-578.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-498.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-654.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-364.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.66MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-578.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.52MB/s(Youtube:不良林)
+      - 🇫🇷 法国-498.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-654.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-342.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-364.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-328.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
